# wallet-save

./: API documentation.postman_collection.json  README.md
docker/: Dockerfile_backend  Dockerfile_frontend  docker-compose.yml
src/: pyproject.toml
src/backend/: alembic.ini  dependencies.py  main.py  schemas.py  service.py  sqlite.db
src/backend/api/: expenses.py
src/backend/auth/: auth.py  service.py
src/backend/db/: connections.py  models.py  service.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 3a4440ff0c58_initial_migration_1.py
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.jsx  api.js
src/frontend/src/components/: ExpensesPage.jsx  LoginPage.jsx
src/frontend/src/css/: ExpensesPageAdd.css
