[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["s1lver29 <nikitaselver@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.106.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}


[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
  "venv",
  "migrations"
  ]

line-length = 99

target-version = "py39"

extend-ignore = ["UP006", "UP035"]

[tool.ruff.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 99

[tool.ruff.lint]
select = [
  "W",
  "E",
  "F",
  "UP",
  "N",
  "I",
  "YTT",
  "S"
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

